--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,10 @@ test {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
-
+    implementation("org.slf4j:slf4j-api:1.7.5")
+    implementation("io.github.microutils:kotlin-logging:1.12.5")
 
     testImplementation("org.junit.jupiter:junit-jupiter:5.7.0")
     testImplementation("org.assertj:assertj-core:3.18.1")
+    testImplementation("org.awaitility:awaitility-kotlin:4.0.3")
 }
